[package]
name = "tui-brulee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
taffy = { version = "0.4.0", features = ["grid"] }
textwrap = "0.16.1"

[dev-dependencies]
color-eyre = "0.6.3"
