[package]
name = "tui-brulee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.28.1"
taffy = { version = "0.5.2", features = ["grid"] }
textwrap = "0.16.1"

[dev-dependencies]
color-eyre = "0.6.3"
